working on motor joint paper

--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -7,7 +7,7 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {Intention and motor representation in purposive action}
+\def \ititle {Motor representation in goal ascription}
 \def \isubtitle {}
 \def \iauthor {}
 \def \iauthor {C. Sinigaglia* \& S. Butterfill**
@@ -25,7 +25,7 @@
 %**Department of Philosophy, University of Warwick, UK
 %\\ 
 %***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
-\date{}
+%\date{}
 
 
 \begin{document}
