--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -26,7 +26,7 @@
 
 \setlength\footnotesep{1em}
 
-\bibliographystyle{newapa} %apalike
+\bibliographystyle{$HOME/Documents/submissions/mynewapa} %apalike
 
 \maketitle
 %\tableofcontents
@@ -66,7 +66,10 @@ that recognising a constitutive role for motor representation in joint action ma
 \section{Social motor representation}
 We start from the premise that reciprocal agent-neutral motor representation enables some joint actions.
 This needs unpacking.
-A representation (motor or not) is \emph{agent-neutral} if its content does not specify any agent or agents.
+A representation (motor or not) is \emph{agent-neutral} if its content does not specify any agent or agents.%
+\footnote{
+Our use of the term `agent-netural' to describe motor representations bears no relation to the use of the same term  to describe reasons \citep[on the latter, see][]{Parfit:1984fk}.
+}
 To illustrate, agent neutral representations are sometimes found at the early stages of planning.
 Imagine that you and some friends are tasked with preparing a holiday.  
 You might first write down a plan of action without specifying who will act; the plan simply describes what is to be done.
@@ -178,195 +181,197 @@ So what is the difference between the individual and the joint case?  From the p
 \section{Grounding the purposiveness of joint action}
 So far we have only been considering a possible role for social motor representation in enabling joint action.  
 Our primary concern, though, is with what joint action is.
-And of course not all enabling features are constitutive. 
-But the details of how 
+The details of how 
 social motor representation enables joint action
  already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
 To see why,
 let’s go back to individual action for a moment again.
 
-
-
-\section{Slide}
 A basic question about ordinary, individual action is:
 What is the relation between a purposive action and the outcome or outcomes to which it is directed?
-
-Many ordinary purposive actions have many different outcomes.
+Purposive actions typically have many actual outcomes.
 Grabbing little Isabel by the hands I swing her around, causing her to laugh and, simultaneously, breaking a vase.
-In fact the outcome to which this purposive action was directed might not be among its actual outcomes; after all, actions can fail.
-
-
-
-\section{Slide}
+Either or both of these might be outcomes to which my action is directed.
+Note also that some or all of the outcomes to which my action was directed might not be among its actual outcomes; after all, actions can fail.
 So among all the actual and possible outcomes of my action, one or some are singled out as specially related to this action.
-One aspect of the question concerns what singles out the outcome or outcomes, actual or merely possible, to which a particular purposive is directed.
-But there is also a second aspect ...
+The question is what singles out the outcome or outcomes, actual or merely possible, to which a particular purposive is directed.
+
+This question is closely related to a second.
+Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around includes my reaching for her wrists, grasping them and then spinning us around.  
+But  my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
+The second question, then, is this: for a particular action directed to a specified goal, what determines which activities%
+\footnote{
+As we use the term `activities',
+all actions are activities 
+and so are  things like reaching and grasping.
+This should make it clear that our position does not depend on whether or not reachings and the like are  actions.
+} comprise the purposive action and which do not.
 
 
-
-\section{Slide}
-Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around starts with my reaching for her wrists, grasping them and then spinning us around ... and my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
-
-
-
-\section{Slide}
-So another aspect of our question is what determines which activities comprise the purposive action and which do not.
-
-
-
-
-
-\section{Slide}
-The standard answer to this question involves intention.
-An intention (1) represents an outcome, (2) coordinates the one or several activities which comprise the action; and (3) coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
-
-What binds particular component actions together into larger purposive actions?  It is the fact that these actions are all parts of plans involving a single intention.
-What singles out an actual or possible outcome as one to which the component actions are collectively directed?  It is the fact that this outcome is represented by the intention.
-
+The standard answer to both questions involves intention.
+An intention represents an outcome, coordinates the one or several activities which comprise the action, and coordinates these activities in a way that would normally facilitate the outcome's occurrence.
+What binds component activities together into larger purposive actions?  
+It is the fact that these actions are all consequences of plans involving a single intention (and are all appropriately related to those plans).
+What singles out an actual or possible outcome as one to which the component activities are collectively directed?  
+It is the fact that this outcome is represented by the intention.
 So the intention is what binds component actions together into purposive actions and links the action taken as a whole to the outcomes to which they are directed.
 
-
-
-\section{Slide}
-Now as Elisabeth Pacherie has argued \citep[pp.\ 189-90]{pacherie:2008_action} (and I’ve had a go at arguing this in joint work with Corrado Sinigaglia recently too),
-motor representations are relevantly similar to intentions.
-
-Of course motor representations differ from intentions in some important ways (as Pacherie also notes).
-
+Motor representations are relevantly similar to intentions,
+as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
+Of course motor representations differ from intentions in some important ways (as these authors note).
 But they are similar in the respects that matter for explaining the purposiveness of action.
-(1) Like intentions, some motor representations represent outcomes (and not merely patterns of joint displacements, say).
-(2) Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
-(3) And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
-
-So in the individual case, it seems to me quite straightforward that there is a role for motor representation to play in explaining the purposiveness of action [*explaining the possibility of purposive action?].
-
-The claim is not that \emph{all} purposive actions are linked to outcomes by motor representations, just that some are.
-In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
+For, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
+Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
+And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
+So anyone who accepts the standard story about purposive action and intention
+should also accept that a similar story about purposive action and motor representation.
+Given that the two basic questions about ordinary, individual purposive action can also be answered by appeal to intention,
+they can also be answering by appeal to motor representation.
+This motivates the following view.
+Not all purposive actions are bound together and linked to outcomes by intentions: in some cases what binds together purposive actions and links them to outcomes are motor representations.
+%In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
 And of course in many cases it may be that both intention and motor representation are involved.
 
+This is one reason for supposing that motor representation is not merely an enabling condition for ordinary, individual action but also plays a role in explaining what action is (just as intention does).
+Now let’s return to joint action.
 
-
-\section{Slide}
-Now let’s turn to joint action.
-
-
-
-\section{Slide}
-The same question we asked about ordinary, individual action also arises for joint action.
-What is the relation between a purposive joint action and the outcome or outcomes to which it is directed?
-
-
-
-
-\section{Slide}
-And again the question has two aspects.
+The same two questions we asked about ordinary, individual action also arise for joint action.
+%What is the relation between a purposive joint action and the outcome or outcomes to which it is directed?
 What singles out the outcome or outcomes to which a purposive joint action is directed?
+And what binds together the various activities (of several agents) that make up the joint action?
+%A difference in the case of joint action is, of course, that the component activities are not activities of a single agent.
 
-
-
-\section{Slide}
-And what binds together the various activities that make up the joint action?
-The difference in the case of joint action is, of course, that these activities are not necessarily activities of a single agent.
-
-
-
-
-\section{Slide}
-The answer to this question for the case of joint action is also superficially similar in the answer we gave in the case of ordinary, individual action.
-
+If we appeal to a notion of shared intention,
+we can answer these questions about joint action in a way that is superficially similar to way we answered the parallel questions about ordinary, individual action.
 A shared intention is what relates purposive joint actions to the outcomes to which they are directed.
-For the shared intention
-(1) involves a representation, on the part of each agent, of an outcome
-(2) coordinates the several agents’ activities
+For the shared intention 
+involves a representation, on the part of each agent, of an outcome,
+coordinates the several agents’ activities
 and 
-(3) coordinates the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+coordinates the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+This is how a shared intention can bind together the activities comprising a joint action and link them to an outcome.
+%Shared intention does for joint action roughly what ordinary intention does for ordinary, individual action.
 
-It is in this sense that a shared intention can ground the purposiveness of a joint action.
+% [individual]	intention : motor representation
+% 					::
+% [joint]			shared intention : social motor representation
 
-
-
-
-\section{Slide}
-But what we saw earlier, what the research by Kourtis et al and others indicates, is that social motor representation can play a  role similar to that of shared intention.
-
+Our earlier discussion of how social motor representation might enable joint action already shows that social motor representation resembles shared intention in this respect.
 Return to the example of two agents moving an object in a way that involves passing it between them.
-Suppose that their passing involves reciprocal agent-neutral motor representations of the outcome, which is the movement of the object. 
-These motor representations
-(1) represent an outcome to which the joint action is directed,
-(2) coordinate the several agents’ activities
+Suppose that their passing involves a social motor representation of the outcome,
+%reciprocal agent-neutral motor representations of the outcome, 
+which is the movement of the object. 
+Then there are motor representations, one for each agent, 
+of an outcome to which the joint action is directed.
+And these representations coordinate the several agents' activities,
 and 
-(3) coordinate the several agents’ activities in a way that would normally facilitate the occurrence of the represented outcome.
-Because each agent represents the whole movement and plans all of its implementation irrespective of which parts she will actually perform, each agent plans the action in a way that should coordinate with the other agent’s plans providing they use similar planning procedures
-
-[*What I’m saying here, in effect, is that both shared intention and social motor representation can yield a COLLECTIVE GOAL]
-
-
-
-\section{Slide}
-What I’m suggesting is very simple.
-
-If you think that in ordinary, individual action, the purposiveness of actions can be grounded by motor representations
-(and you should think this because it’s true),
-then you should also think the same about actions involving two or more agents---the purposiveness of a joint action can be grounded in motor representations as well as in shared intentions.
-
-
-
-\section{Slide}
-Let me try another way of presenting the same idea.
-Here are Michael Bratman’s sufficient conditions for shared intention.
-I want to suggest that social motor representation provides a parallel
-
-
-
-\section{Slide}
-There is a direct parallel with the first condition: in the case of motor representation, each agent represents the outcome (e.g. the movement of the object).
-The key claim here is that some motor representations (i) represent outcomes, and (ii) represent the outcomes of actions not all of whose components will be executed by the agent whose motor representation it is.
-
-
-
-\section{Slide}
-Here there is clearly no \emph{direct} parallel. 
-I don’t think motor representations can represent motor representations in the way that intentions can represent intentions.
-But I do think there is a parallel of sorts.
-Each agent’s having a motor representation of the distributed goal of their action does ensure meshing of subplans.
-What ensures this meshing is not the fact that each agent represents the other's plans \emph{as the other's plans}.
-Rather in the case where joint action is grounded in social motor representation, what ensures meshing of subplans is two facts (i) each agent plans all of the agents’ actions, and (ii) the agents rely on similar planning strategies (planning strategies that are sufficiently similar to ensure meshing subplans).
-
-
-\section{Slide}
-I’m less sure about a parallel to the common knowledge condition.
-As I see things, the justification for supposing that shared intention involves common knowledge concerns a normative link between intention and reasons.
-In acting on intentions, one should be acting for reasons.
-And a consideration can only be among your reasons if you know that consideration.
-So I think the need for common knowledge arises from the need to explain how another person’s intentions could be among your reasons for acting.
-I don’t think this need arises in the case of motor representation because it seems to me that the sort of planning of which motor representation is an element does not involve acting for reasons in the same sense.  
-(In motor action, there are reasons why we do things (of course!) but these are not  reasons for which we act.)
-What motor joint action requires is not that your motor plans provide reasons for mine.
-There just has to be a good chance that this is true relative to the costs and benefits of joint action and the alternatives to joint action.
-So \textbf{I think that instead of common \emph{knowledge}, in the case of social motor representation there is a common \emph{background} of dispositions, habits and expectations.}%
+do so in ways that would normally facilitate the occurrence of the  outcome represented.%
 \footnote{
-[***CUT but one thing that might do the work of common knowledge is a custom or habit 
-that would allow the agents, in their particular social context, to rely on each other’s cooperation.
-In some countries this sort of thing works on public transport; 
-it is reasonable to take for granted that, if you are obviously struggling with a pram or suitcase, then someone nearby will help.]
+This implies that social motor representation and the associated processes underwrite what \citet{Butterfill:2011_wija} calls \textit{collective goals}.
 }
+So social motor representation can bind together the activities comprising a joint action and link them to an outcome in much the way that shared intention can.
+
+%[*use above?] Because each agent represents the whole movement and plans all of its implementation irrespective of which parts she will actually perform, each agent plans the action in a way that should coordinate with the other agent's plans providing they use similar planning procedures
+
+%[*What I’m saying here, in effect, is that both shared intention and social motor representation can yield a COLLECTIVE GOAL]
+
+What we are suggesting is very simple.
+Given the correctness of a standard view about shared intention in joint action, 
+and 
+given that in ordinary, individual action, motor representations and bind together activities and link them to outcomes,
+it is plausible that 
+in joint action, several agents' activities can be bound together and linked to an outcome by social motor representation.
+That is,
+the purposiveness of a joint action can be grounded not only in shared intention, but also in social motor representation.
 
 
 
-\section{Slide}
-If this is right, if social motor representations play a role analogous to the structure of intentions and knowledge which Bratman identifies as sufficient for shared intention, then this is another reason to think that motor representations can ground the purposiveness of joint action.
+\section{Social motor representation: like shared intention}
+It may be helpful to compare and contrast the notion of social motor representation with a notion of shared intention. 
+We shall use Bratman's account of shared intention as it is the best developed. 
+Here are Bratman’s collectively sufficient\footnotemark \ conditions for you and I to have a shared intention that we J:
+%
+\footnotetext{
+In \citet{Bratman:1992mi}, the following were offered as jointly sufficient \textit{and individually necessary} conditions; the retreat to sufficient conditions occurs in \citet[][pp.\ 143-4]{Bratman:1999fr} where he notes that `for all that I have said, shared intention might be multiply realizable.'
+} 
+%
+\begin{quote}
+\label{quote:bratman_account}
+`1. (a) I intend that we J and (b) you intend that we J
+ 
+`2. I intend that we J in accordance with and because of la, lb, and meshing subplans of la and lb; you intend that we J in accordance with and because of la, lb, and meshing subplans of la and lb
+ 
+`3. 1 and 2 are common knowledge between us' \citep[][p.\ View 4]{Bratman:1993je}
+\end{quote}
+%
+Let us take each of these three conditions in turn.
+
+To see a parallel with the first condition, (1), recall two (empirical) claims on which the notion of social motor representation is based.
+First, some motor representations represent outcomes.
+Second, some motor representations represent the outcomes of actions not all of whose components will be executed by the agent whose motor representation it is.
+Given these claims, there is a direct parallel with Bratman's first condition, (1).
+In the case of social motor representation, each agent represents the outcome: but it is represented motorically rather than by having an intention.
+% (in our earlier example, this was the movement of the object).
+
+
+Concerning the second condition, (2), there is clearly no {direct} parallel. 
+Whereas one intention can be about another intention, 
+we assume that one motor representation cannot be about another motor representation.
+But we do think there is a parallel of sorts. 
+A function of the second condition, (2), is to ensure meshing of subplans. 
+Each agent's having a motor representation of the outcome to which their joint action is directed does ensure meshing of subplans.
+What ensures this meshing is not the fact that each agent represents the other's plans {as the other's plans}.
+Rather in the case where joint action is grounded in social motor representation, what ensures meshing of subplans is this:
+each agent plans all of the agents' actions, and the agents rely on planning strategies that are sufficiently similar to ensure meshing subplans.
+
+
+The third condition, (3), concerns common knowledge.
+Why is this condition needed?
+Bratman himself says little.%
+\footnote{
+See \citet[p.\ 117]{Bratman:1993je}:
+`it seems reasonable to suppose that in shared intention the fact that each has the relevant attitudes is itself out in the open, is public.' 
+In other words, common knowledge is needed because it is.
+}
+One possible justification for supposing that shared intention involves common knowledge concerns a normative link between intention and reasons.
+In acting on an intention, there should be reasons for which the  agent acts.
+And, arguably, a consideration can only be among the reasons for which an agent acts if she knows that consideration (or at least is in a position to know it).
+So the need for common knowledge may arise from the need to explain how reasons for which an agent acts could include facts about others' intentions.
+This need does not arise in the case of social motor representation (at least not in the same way).
+For, arguably, where actions involve motor representations, it is not true that there should be reasons for which the agent acts.
+(Of course there are reasons which explain why motor actions happen; but these need not be reasons for which agents act.)
+So motor joint action does not require that one agent's motor representations provide reasons for which another agent acts.
+Instead, what is required is this.
+There should be a good chance---good relative to the potential costs and benefits of attempting this particular joint action now---that social motor representation will provide the necessary coordination.
+Of course this could be guaranteed by common knowledge. 
+But common knowledge is not required.
+Alternatively it can be ensured by common planning processes and a common {background} of dispositions, habits and expectations. 
+%common background is for reciprocity of motor representation and similar willingness to engage in joint action.
+
+If, as we have just argued, social motor representations play a role analogous to the structure of intentions and knowledge which Bratman identifies as sufficient for shared intention, then this is a  (non-decisive)  reason to think that motor representations can ground the purposiveness of joint action.
 
 
 
-\section{Slide}
-Recap: the question was: Does social motor representation  play a role in explaining what joint is?
-I have just been arguing for a positive answer.
-My thesis is this:
-\textbf{Reciprocal agent-neutral motor representations coordinate multiple agents’ actions around an outcome in part by virtue of representing that outcome.}
-That is, reciprocal social motor representations can ground the purposiveness of joint action.
-This is why I think that fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understanding shared intention.
+\section{Social motor representation: unlike shared intention}
+Our opening question was, Which events are joint actions?
+The standard view is that for an event to be a joint action it must be appropriately related to a shared intention.
+We are in the process of arguing that this is not the whole truth about joint action,
+and that some events are joint actions by virtue of being appropriately related to a structure of motor representations---social motor representations.
+We don’t mean to suggest that all joint actions involve social motor representation.
+The picture we are aiming to establish is rather this: some but not all joint actions involve shared intention; some but not all joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
+This is why in our view 
+%Recap: the question was: Does social motor representation  play a role in explaining what joint is?
+%I have just been arguing for a positive answer.
+%My thesis is this:
+%\textbf{Reciprocal agent-neutral motor representations coordinate multiple agents’ actions around an outcome in part by virtue of representing that outcome.}
+%That is, reciprocal social motor representations can ground the purposiveness of joint action.
+%This is why I think that 
+fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understanding shared intention.
 
-I don’t mean to suggest that all joint actions involve social motor representation.  Surely some joint actions do not. 
+***HERE
+***Two lines of objection:
+(1) all joint actions involve share intention
+(2) social motor representation is just a species of shared intention (have just been filling in some details of how shared intentions are realised).
 
 But, equally, \emph{there could be purposive joint actions which do not involve shared intentions},
 just as there can be purposive actions which do not involve intentions at all.
